--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 h1 {
     color: darkcyan;
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
     margin: 20px;
     font-family: 'Noto Serif JP', serif;
+
 }
 
 h2 {
@@ -12,6 +13,7 @@ h2 {
     padding-bottom: 30px;
     margin: 20px;
     font-family: 'Noto Serif JP', serif;
+  
 }
 
 p {
@@ -22,5 +24,30 @@ p {
 
 img{
     margin: 20px;
+
+    
 }
 
+.btn-secondary{
+  
+  margin: 8px;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  background-color: darkcyan;
+  border: 1px solid transparent;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 10rem;
+  
+    
+}
+
+.btn-secondary:hover {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #008080;
+  border-color: transparent;
+}
