--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ h2 {
 }
 
 p {
-    color: darkcyan;
-    margin-top: 50px;
-    font-family: 'Noto Serif JP', serif;
+    color: darkslategrey;
+    margin-top: 10px;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.2rem;
     
 }
@@ -54,4 +54,7 @@ img{
   background-color: #008080;
   border-color: transparent;
 }
+
+
+
 
