--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {
     padding-top: 50px;
     color: darkcyan;
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     margin: 20px;
     font-family: 'Noto Serif JP', serif;
 
@@ -21,19 +21,29 @@ p {
     color: darkcyan;
     margin-top: 50px;
     font-family: 'Noto Serif JP', serif;
+    padding: 5px;
+    margin: 5px;
     font-size: 1.2rem;
     
 }
 
-img{
+img {
     margin: 20px;
-
-    
 }
 
-.btn-secondary{
+.mixingBowl {
+    color: lightcoral;
+    margin-top: 50px;
+    font-family: 'Noto Serif JP', serif;
+    padding: 5px;
+    margin: 5px;
+    font-size: 1.2rem;
+}
+
+.btn-secondary {
   
   margin: 8px;
+  margin-bottom: 20px;
   font-weight: 700;
   color: #fff;
   text-align: center;
@@ -44,8 +54,6 @@ img{
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 10rem;
-  
-    
 }
 
 .btn-secondary:hover {
@@ -53,5 +61,13 @@ img{
   text-decoration: none;
   background-color: #008080;
   border-color: transparent;
+}
+
+.transform {
+  -webkit-transition: all 2s ease;  
+  -moz-transition: all 2s ease;  
+  -o-transition: all 2s ease;  
+  -ms-transition: all 2s ease;  
+  transition: all 2s ease;
 }
 
