--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ p {
     color: darkcyan;
     margin-top: 50px;
     padding: 5px;
+    padding-bottom: 23px;
     margin: 5px;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.2rem;
