--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    padding-top: 50px;
+    padding-top: 20px;
     color: darkcyan;
     text-align: center;
     padding-bottom: 10px;
@@ -9,6 +9,14 @@ h1 {
 }
 
 h2 {
+    color: darkslategrey;
+    text-align: center;
+    padding-bottom: 30px;
+    margin: 20px;
+    font-family: 'Montserrat', sans-serif;  
+}
+
+h3 {
     color: darkslategrey;
     text-align: center;
     padding-bottom: 30px;
