--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    padding-top: 20px;
+    padding-top: 50px;
     color: darkcyan;
     text-align: center;
     padding-bottom: 10px;
@@ -65,6 +65,23 @@ img {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 10rem;
+}
+
+.hintButton {
+  margin: 8x;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  background-color: darkcyan;
+  border: 1px solid transparent;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 10rem;
+  float: right
 }
 
 .btn-secondary:hover {
