--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    padding-top: 50px;
+    padding-top: 60px;
     color: darkcyan;
     text-align: center;
     padding-bottom: 10px;
@@ -81,7 +81,7 @@ img {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 10rem;
-  float: right
+  float: right;
 }
 
 .btn-secondary:hover {
@@ -98,3 +98,4 @@ img {
   -ms-transition: all 2s ease;  
   transition: all 2s ease;
 }
+
